custom domain config

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sjh-portfolio",
   "version": "0.1.0",
-  "homepage": "https://jhahnsheen.github.io/SJH-Portfolio-v4",
+  "homepage": "https://jhahnsheen.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
